# Parareal_KA_MT

./: .gitignore  LICENSE  README.md  build.py  run.py
src/: CMakeLists.txt  patch.py  plot.py  wave2D.cxx  wave2D.hxx
src/common/: CMakeLists.txt  arguments.cxx  arguments.hxx  code.hxx  codeBase.hxx  discretisation.hxx  evaluate.hxx  global.hxx  os.cxx  os.hxx  parameters.cxx  parameters.hxx  probe.cxx  probe.hxx  solution.hxx  state.cxx  state.hxx
src/parareal/: CMakeLists.txt  main.cxx  parareal.hxx
src/reference/: CMakeLists.txt  step_23.cxx
src/sequential/: CMakeLists.txt  main.cxx
